# aura-xai-finrisk-llm

./: .dockerignore  .gitignore  Dockerfile  EDA.ipynb  LICENSE  README.md  docker-compose.yml  pyproject.toml  render.yaml  requirements.txt
aura/utils/: pathing.py
data/processed/: README.md  preprocessor.joblib
docker/api/: Dockerfile.api  start_api.sh
docker/ui/: Dockerfile.ui  start_ui.sh
models/: lgbm_calibrated_v1.joblib  lgbm_feature_order.csv  lgbm_v1.joblib  logreg_meta_v1.json  logreg_v1.joblib  logreg_v1_2025-06-05.joblib  lr_preprocessor.joblib  monotonic_constraints_v1.csv  optuna_lgbm_v1.pkl  optuna_trials_lightgbm_v1.csv  params_lightgbm.json  params_lightgbm_v1.json  preprocessor_top5.joblib  shap_topidx_v1.joblib  surrogate_background_v1.parquet  surrogate_lr_meta_v1.json  surrogate_lr_preprocessor_v1.joblib  surrogate_lr_v1.joblib  surrogate_lr_v2.joblib  surrogate_percentiles_v1.csv  surrogate_thresholds_v1.json  surrogate_top5_pipeline.joblib  vt.joblib  woe_encoder.joblib
notebooks/: 01_data_preprocessing_pipeline.ipynb  02_logistic_regression.ipynb  03a_lightgbm_tuning.ipynb  03b_shap_analysis.ipynb  03c_surrogate_lr.ipynb
notebooks/eda/: 01_data_preprocessing_pipeline.ipynb
notebooks/models/: 02_logistic_regression.ipynb  03_lightgbm_shap.ipynb
reports/: metrics_lgbm_test_v1.md  metrics_lgbm_trainval_v1.md  metrics_lightgbm.md  metrics_logreg.md  metrics_logreg_test_v1.md  metrics_logreg_trainval_v1.md  metrics_sur_test_v1.md  metrics_sur_trainval_v1.md  metrics_surrogate.md
scripts/: start_api.sh  start_ui.sh
src/app/: config.py  main.py
src/aura/api/: server.py
src/aura/app/: config.py  main.py
src/aura/explain/: explainer.py
src/aura/models/: predict.py
src/aura/ui/: app.py
src/aura/utils/: pathing.py
src/data/: preprocess.py
src/explain/: explainer.py  shap_utils.py
src/models/: predict.py
src/rag/: __init__.py  config.py  explainer.py  ingest.py
tests/: conftest.py  test_explainer_fallback.py  test_percentiles.py  test_predict.py  test_threshold_logic.py  test_validate.py
